--- a/Crud Assignment/package.json
+++ b/Crud Assignment/package.json
@@ -13,7 +13,10 @@
     "antd": "^5.14.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.2",
+    "uuid": "^9.0.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
