--- a/Crud Assignment/package.json
+++ b/Crud Assignment/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "antd": "^5.14.2",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4",
     "uuid": "^9.0.1",
     "uuidv4": "^6.2.13"
   },
